--- a/foodrun/index.html
+++ b/foodrun/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/favicon/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,500&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <title>Food Run</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="width: 100%;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
